# api-pedidos

./: README.md  pyproject.toml
api_pedidos/: api.py
tests/: test_api.py
