
[tool.poetry]
name = "api-pedidos"
version = "0.1.0"
description = ""
authors = ["leopereshz <leonardoperes1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
httpx = "^0.22.0"
uvicorn = "^0.17.6"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
httpie = "^3.1.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
